--- a/beginning_html_v1/index.html
+++ b/beginning_html_v1/index.html
@@ -7,6 +7,8 @@
     <title>beginning html v1</title>
   </head>
   <body>
+    <a href="html5semantictags.html">Go to Blog</a>
+    <hr />
     <!--Headings-->
     <h1>Heading One</h1>
     <h2>Heading Two</h2>
